# value-bag

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: by_ref.rs  capture.rs  owned.rs  seq.rs
meta/serde1/: Cargo.toml
meta/serde1/src/: lib.rs
meta/sval2/: Cargo.toml
meta/sval2/src/: lib.rs
src/: error.rs  fill.rs  impls.rs  lib.rs  owned.rs  seq.rs  test.rs  visit.rs
src/internal/: error.rs  fmt.rs  mod.rs  owned.rs  seq.rs  serde.rs  sval.rs
src/internal/cast/: mod.rs  primitive.rs  seq.rs
src/internal/serde/: v1.rs
src/internal/sval/: v1.rs  v2.rs
