[package]
name = "value-bag"
version = "1.0.0-alpha.7"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/value-bag"
description = "Anonymous structured values"
repository = "https://github.com/sval-rs/value-bag"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]
exclude = [
    ".github/*",
]
build = "build.rs"

[package.metadata.docs.rs]
features = ["std", "error", "sval", "serde", "test"]

[features]
# Use the standard library
std = []

# Add support for sval
sval = ["sval1"]
sval1 = ["sval1_lib"]

# Add support for `serde`
serde = ["serde1"]
serde1 = [
    "serde1_lib",
    "sval1_lib/serde1",
    "sval1_lib/alloc",
    "erased-serde1/alloc",
    "serde1_fmt"
]

# Add support for `std::error`
error = [
    "std",
    "sval1_lib/std"
]

# Add support for converting value bags into test tokens
test = ["std"]

[dependencies.sval1_lib]
version = "1.0.0-alpha.5"
optional = true
default-features = false
features = ["fmt"]
package = "sval"

[dependencies.serde1_lib]
version = "1"
default-features = false
optional = true
package = "serde"

[dependencies.serde1_fmt]
version = "1"
optional = true
package = "serde_fmt"

[dependencies.erased-serde1]
version = "0.3"
default-features = false
optional = true
package = "erased-serde"

# Only needed on non-nightly compilers
[dependencies.ctor]
version = "0.1"

[dev-dependencies.sval1_lib]
version = "1.0.0-alpha.5"
features = ["test"]
package = "sval"

[dev-dependencies.serde1_test]
version = "1"
package = "serde_test"

[dev-dependencies.sval1_json]
version = "1.0.0-alpha.5"
features = ["std"]
package = "sval_json"

[dev-dependencies.serde1_json]
version = "1"
package = "serde_json"

[dev-dependencies.wasm-bindgen]
version = "0.2"

[dev-dependencies.wasm-bindgen-test]
version = "0.3"

[build-dependencies.rustc]
version = "0.9"
package = "version_check"
