[package]
name = "value-bag"
version = "1.0.0-alpha.9"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/value-bag"
description = "Anonymous structured values"
repository = "https://github.com/sval-rs/value-bag"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]
exclude = [
    ".github/*",
]
build = "build.rs"

[package.metadata.docs.rs]
features = ["std", "error", "sval", "serde", "test"]

[workspace]
members = [
    "meta/serde1",
    "meta/sval2",
]

[features]
# Use the standard library
std = [
    "value-bag-sval2?/std",
    "value-bag-serde1?/std",
]

# Assume an allocator
alloc = [
    "value-bag-sval2?/alloc",
    "value-bag-serde1?/alloc",
]

# Add support for `sval`
sval = ["sval2"]
sval2 = [
    "value-bag-sval2",
]

# Add support for `serde`
serde = ["serde1"]
serde1 = [
    "alloc",
    "value-bag-serde1",
    "value-bag-sval2?/serde1",
]

# Add support for `std::error`
error = [
    "std",
]

# Add support for testing the contents of a value bag
test = ["std"]

[dependencies.value-bag-sval2]
version = "1.0.0-alpha.9"
path = "meta/sval2"
optional = true

[dependencies.value-bag-serde1]
version = "1.0.0-alpha.9"
path = "meta/serde1"
optional = true

# Only needed on non-nightly compilers
[dependencies.ctor]
version = "0.2"

[dev-dependencies.value-bag-sval2]
path = "meta/sval2"
features = ["test", "json"]

[dev-dependencies.value-bag-serde1]
path = "meta/serde1"
features = ["test", "json"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen-test]
version = "0.3"

[build-dependencies.rustc]
version = "0.9"
package = "version_check"
