[package]
name = "value-bag-serde1"
version = "1.4.1"
edition = "2021"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0 OR MIT"
description = "Implementation detail for value-bag"

[features]
std = [
    "serde/std",
    "erased-serde/std",
]

alloc = []

owned = [
    "serde_buf"
]

json = [
    "serde_json",
]

test = [
    "serde_test",
]

[dependencies.serde]
version = "1"
features = ["alloc"]
default-features = false

[dependencies.erased-serde]
version = "0.3"
features = ["alloc"]
default-features = false

[dependencies.serde_fmt]
version = "1"
default-features = false

[dependencies.serde_buf]
version = "0.1"
default-features = false
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.serde_test]
version = "1"
optional = true
